GraphCodeBERT/AuthorshipAttribution/code/parser/tree-sitter-javascript/grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      repeat($.statement)
    ),

    expression_statement: $ => seq(
      $._expressions,
      $._semicolon
    ),

    lexical_declaration: $ => seq(
      field('kind', choice('let', 'const')),
      commaSep1($.variable_declarator),
      $._semicolon
    ),

    variable_declarator: $ => seq(
      field('name', choice($.identifier, $._destructuring_pattern)),
      optional($._initializer)
    ),

    _expressions: $ => choice(
      $.expression,
      $.sequence_expression
    ),

    glimmer_template: $ => choice(
      seq(
        field('open_tag', $.glimmer_opening_tag),
        field('content', repeat($._glimmer_template_content)),
        field('close_tag', $.glimmer_closing_tag),
      ),
      // empty template has no content
      // <template></template>
      seq(
        field('open_tag', $.glimmer_opening_tag),
        field('close_tag', $.glimmer_closing_tag),
      ),
    ),

    _glimmer_template_content: $ => /.{1,}/,
    glimmer_opening_tag: $ => seq('<template>'),
    glimmer_closing_tag: $ => seq('</template>'),

    class_declaration: $ => prec('declaration', seq(
      repeat(field('decorator', $.decorator)),
      'class',
      field('name', $.identifier),
      optional($.class_heritage),
      field('body', $.class_body),
      optional($._automatic_semicolon)
    )),

    _initializer: $ => seq(
      '=',
      field('value', $.expression)
    ),

    _destructuring_pattern: $ => choice(
      $.object_pattern,
      $.array_pattern
    ),

    identifier: $ => {
      const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/
      const alphanumeric = /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/
      return token(seq(alpha, repeat(alphanumeric)))
    },

    class_body: $ => seq(
      '{',
      repeat(choice(
        seq(field('member', $.method_definition), optional(';')),
        seq(field('member', $.field_definition), $._semicolon),
        field('member', $.class_static_block),
        field('template', $.glimmer_template)
      )),
      '}'
    ),

    _semicolon: $ => choice($._automatic_semicolon, ';')
  }
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
